--- a/Week-1/advance.html
+++ b/Week-1/advance.html
@@ -9,6 +9,16 @@
 </head>
 
 <body>
+  <nav>
+    <ul style="display:flex; gap: 5px; list-style-type: none;  ">
+      <li>
+        <a href="index.html" target="_blank"> Session 1</a>
+      </li>
+      <li>
+        <a href="advance.html" target="_blank"> Advanced HTML</a>
+      </li>
+    </ul>
+  </nav>
   <div>
     <img src="./img/UniversityLogo.svg" alt="Logo of The University of Arizona">
   </div>
