--- a/Week-1/index.html
+++ b/Week-1/index.html
@@ -5,13 +5,19 @@
     <title>Week 1</title>
   </head>
   <body>
-    <ul>
-      <li>
-        <a href="Protocol Stack.pdf" target="_blank"> Session 1</a>
-      </li>
-      <li>
-        <a href="advance.html" target="_blank"> Advanced HTML</a>
-      </li>
-    </ul>
+    <nav>
+      <ul>
+        <li>
+          <a href="Protocol Stack.pdf" target="_blank"> Session 1</a>
+        </li>
+        <li>
+          <a href="advance.html" target="_blank"> Advanced HTML</a>
+        </li>
+      </ul>
+    </nav>
+    
+    <div class="content">
+      <h1>WEEK 1</h1>
+    </div>
   </body>
 </html>
