--- a/Week-1/advance.html
+++ b/Week-1/advance.html
@@ -15,7 +15,7 @@
         <a href="index.html" target="_blank"> Session 1</a>
       </li>
       <li>
-        <a href="advance.html" target="_blank"> Advanced HTML</a>
+        <a href="advance.html" target="_blank"> News Article</a>
       </li>
     </ul>
   </nav>
