--- a/Week-1/index.html
+++ b/Week-1/index.html
@@ -11,7 +11,10 @@
           <a href="Protocol Stack.pdf" target="_blank"> Session 1</a>
         </li>
         <li>
-          <a href="advance.html" target="_blank"> Advanced HTML</a>
+          <a href="advance.html" target="_blank"> News Article</a>
+        </li>
+        <li >
+          <a href="table.html">Table</a>
         </li>
       </ul>
     </nav>
