--- a/Week-1/index.html
+++ b/Week-1/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Week 1</title>
-  </head>
-  <body>
-    <nav>
-      <ul>
-        <li>
-          <a href="Protocol Stack.pdf" target="_blank"> Session 1</a>
-        </li>
-        <li>
-          <a href="advance.html" target="_blank"> News Article</a>
-        </li>
-        <li >
-          <a href="table.html">Table</a>
-        </li>
-      </ul>
-    </nav>
-    
-    <div class="content">
-      <h1>WEEK 1</h1>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Week 1</title>
+</head>
+
+<body>
+  <nav>
+    <ul>
+      <li>
+        <a href="Protocol Stack.pdf" target="_blank"> Session 1</a>
+      </li>
+      <li>
+        <a href="advance.html" target="_blank"> News Article</a>
+      </li>
+      <li>
+        <a href="table.html">Table</a>
+      </li>
+      <li>
+        <a href="hometown.html">Hometown</a>
+      </li>
+    </ul>
+  </nav>
+
+  <div class="content">
+    <h1>WEEK 1</h1>
+  </div>
+</body>
+
 </html>
