--- a/Week-1/index.html
+++ b/Week-1/index.html
@@ -21,6 +21,9 @@
       <li>
         <a href="hometown.html">Hometown</a>
       </li>
+      <li>
+        <a href="poem.html">Poem</a>
+      </li>
     </ul>
   </nav>
 
