--- a/Week-1/session-2/index.html
+++ b/Week-1/session-2/index.html
@@ -10,10 +10,7 @@
   <nav>
     <ul>
       <li>
-        <a href="Protocol Stack.pdf" target="_blank"> Session 1</a>
-      </li>
-      <li>
-        <a href="advance.html" target="_blank"> News Article</a>
+        <a href="advance.html"> News Article</a>
       </li>
       <li>
         <a href="table.html">Table</a>
